# rtaio

./: .gitignore  CMakeLists.txt  build.py  conanfile.txt
ddl/: ddl_excel_parser.cpp  ddl_exception.cpp  ddl_table.cpp  ddl_table_column.cpp  ddl_table_column.h  ddl_table_sql_generator.cpp  main.cpp
distribution/macos/: AppIcon.icns  Info.plist.in
gui/: gui.h  gui_main.cpp  gui_menu_window.cpp  gui_menu_window.h  gui_utils.cpp  gui_utils.h
gui/ddl/: gui_ddl_gen_window.cpp  gui_ddl_gen_window.h
include/: common.h
modules/ddl_gen/: CMakeLists.txt  conanfile.txt  ddl_excel_parser.cpp  ddl_exception.cpp  ddl_table.cpp  ddl_table_column.cpp  ddl_table_sql_generator.cpp  main.cpp
modules/ddl_gen/include/ddl_gen/: ddl_excel_parser.h  ddl_exception.h  ddl_gen.h  ddl_table.h  ddl_table_sql_generator.h
modules/ddl_gen/test/: test_add.cpp
resources/: template.xlsx
translation/: rtaio_main.pot
translation/zh/LC_MESSAGES/: rtaio_main.po
translation/zh_CN/: rtaio_main.mo  rtaio_main.po
